fixed job logo not aligned

--- a/src/styles/shared/jobs.css
+++ b/src/styles/shared/jobs.css
@@ -13,23 +13,18 @@
 }
 
 .logo {
+    background-image: url("../../images/company_logo.png");
+    background-size: 150px;
+    background-repeat: no-repeat;
+    background-position: center;
     width: 200px;
-}
-
-.logo .background {
-    height: 100%;
-    width: 100%;
-    opacity: 0.4;
-    text-align: center;
-    position: relative;
-}
-
-.logo .top {
-    width: 100%;
-    height: 100%;
     opacity: 1;
-    z-index: 1;
-    margin-top: -200px;
+}
+
+.job .background {
+    width: 200px;
+    margin-left: -200px;
+    opacity: 0.25;
 }
 
 .contents {
